# gbmu

./: .gitignore  Cargo.toml  README.md  script.sh  tests_blargg_results.txt  thoughts.txt
.github/workflows/: rust.yml
asm-experimentation/: Makefile  finest-jump.gb  hello-world.gb  launch.sh
asm-experimentation/finest-jump/: finest-jump.asm
asm-experimentation/hello-world/: hello-world.map
documentation/: Memory Mapping.md
documentation/cpu/: cpu_core.md  cpu_instructions.md
documentation/mmu/: interrupt.md  mbc.md  mmu.md  timers.md
src/: app.rs  cli.rs  cpu.rs  debugger.rs  displayable.rs  file.rs  flags_registers.rs  gameboy.rs  gui.rs  instruction.rs  instructions.rs  main.rs  mmu.rs  ppu.rs  registers.rs  strip.rs  ui_states.rs
src/cpu/: block0.rs  block1.rs  block2.rs  block3.rs  block_prefix.rs  conditions.rs  cpu.rs  flags_registers.rs  mod.rs  ops8.rs  registers.rs  timer.rs  utils.rs
src/gui/: app.rs  common.rs  mod.rs
src/gui/themes/: dark_theme.rs  light_theme.rs  mod.rs
src/gui/views/: debugging_view.rs  debuging_view.rs  emulation_view.rs  mod.rs  selection_view.rs  starting_view.rs
src/instructions/: block0.rs  conditions.rs  mod.rs
src/memory/: bus.rs  mapping_memory.rs  mod.rs  read_write_memory.rs  region.rs
src/mmu/: apu.rs  bus.rs  interrupt.rs  mbc.rs  oam.rs  region.rs  rom_banks.rs  timers.rs
src/ppu/: colors_palette.rs  lcd_control.rs  lcd_status.rs  oam_fetcher.rs  obj_piso.rs  pixel.rs  pixel_fetcher.rs  pixel_fifo.rs
src/ui_states/: debuging_game.rs  game_launched.rs  starting_menu.rs
tests/: memory_tests.rs
(+2 files in other folders)
