[package]
name = "gbmu"
version = "0.3.0"
edition = "2024"

[dependencies]
egui = "0.34.1"
eframe = "0.34.0"
egui-file-dialog = "0.13.0"
egui_extras = "0.34.1"

pixels = "0.15.0"
winit = "0.30.11"
tokio = { version = "1.46.1", features = ["full"] }
flamegraph = "0.6.11"
chrono = "0.4.43"
clap = { version = "4.6.1", features = ["derive", "cargo"] }
